# python-asserts

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  NEWS.md  NEWS.rst  README.md  README.rst  TODO.md  asserts.py  asserts.pyi  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_asserts.py
.github/: dependabot.yml
.github/workflows/: black.yml  test-and-lint.yml
asserts/: __init__.py  __init__.pyi
