[tool.poetry]
name = "asserts"
version = "0.13.2.dev0"
description = "Stand-alone Assertions"
readme = "README.md"
authors = ["Sebastian Rittau <srittau@rittau.biz>"]
license = "MIT"
homepage = "https://github.com/srittau/python-asserts"
repository = "https://github.com/srittau/python-asserts"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
packages = [{ include = "asserts" }]
include = ["*/py.typed", "*.pyi"]

[tool.poetry.urls]
"GitHub" = "https://github.com/srittau/python-asserts"
"Bug Tracker" = "https://github.com/srittau/python-asserts/issues"
"Changes" = "https://github.com/srittau/python-asserts/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.8.1"
typing-extensions = "^4.10.0"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.9,<1.14"
poethepoet = ">=0.27.0,<0.30"
ruff = ">=0.5.1,<0.8.0"

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.poe.tasks]
test = "python3 -Wall -m unittest test_asserts"
doctest = "python3 -m doctest asserts/__init__.py"
lint = "ruff check asserts test_asserts.py"
typecheck = "mypy asserts test_asserts.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
