[project]
name = "asserts"
version = "0.14.1.dev0"
description = "Stand-alone Assertions"
readme = "README.md"
authors = [{ name = "Sebastian Rittau", email = "sebastian.rittau@zfutura.de" }]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
requires-python = ">= 3.10"
dependencies = ["typing-extensions >= 4.10.0, < 5"]

[project.urls]
"Homepage" = "https://github.com/srittau/python-asserts"
"Repository" = "https://github.com/srittau/python-asserts"
"GitHub" = "https://github.com/srittau/python-asserts"
"Bug Tracker" = "https://github.com/srittau/python-asserts/issues"
"Changes" = "https://github.com/srittau/python-asserts/blob/main/CHANGELOG.md"

[dependency-groups]
dev = ["mypy >= 1.14, < 1.15", "poethepoet", "ruff >= 0.14.0, < 0.15.0"]

[tool.poetry]
packages = [{ include = "asserts" }]
include = ["*/py.typed", "*.pyi"]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.poe.tasks]
test = "python3 -Wall -m unittest test_asserts"
doctest = "python3 -m doctest asserts/__init__.py"
lint = "ruff check asserts test_asserts.py"
typecheck = "mypy asserts test_asserts.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
